# congress-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README  README.md
.github/workflows/: rust.yml
src/: amendment.rs  amendment_type.rs  amendments.rs  bill.rs  bill_type.rs  bills.rs  chamber.rs  error.rs  latest_action.rs  lib.rs  page.rs  pagination.rs  parameters.rs  sort.rs
src/amendment/: actions.rs  amendments.rs  cosponsors.rs
src/bill/: actions.rs  amendments.rs  committees.rs  cosponsors.rs  related_bills.rs  subjects.rs  summaries.rs  text.rs  titles.rs
tests/integration/: bill.rs  bills.rs  mod.rs
